syntax = "proto3";

package account.auth.v1;

option go_package = "github.com/iput-kernel/foundation-account/internal/pb/account/auth/v1;accountv1";

message GetPublicKeyRequest {}

message GetPublicKeyResponse {
  string public_key = 1;
}
